--- a/submission_2/PNAS-template-main.tex
+++ b/submission_2/PNAS-template-main.tex
@@ -20,15 +20,15 @@
 
 
 % Please give the surname of the lead author for the running footer
-\leadauthor{Lead author last name} 
+\leadauthor{Trendl} 
 
 % Please add here a significance statement to explain the relevance of your work
-\significancestatement{Previous research has suggested a link between football and domestic abuse in England. Using a comprehensive crime dataset from the third largest police force in England from the period between 2010 and 2018, we demonstrate that alcohol-related domestic abuse increases by 61\% following the victory of the England football team, and that the temporal dynamics of this increase is highly consistent with a causal relationship between England victories and domestic abuse. This increase is especially pronounced in the subgroup of male-to-female domestic abuse, and is also present in other violent male-to-female crimes. Our work provides strong evidence for the link between football and domestic abuse, and further illuminates the instrumental role of alcohol and masculinity construction in this relationship.}
+\significancestatement{Previous research has suggested an association between football and domestic abuse in England. Using a comprehensive crime dataset from the third largest police force in England from 2010 and 2018, we demonstrate that alcohol-related domestic abuse (and only alcohol-related domestic abuse) increases by 61\% following the victory of the England football team. The temporal dynamics of this increase is highly consistent with a causal relationship between England victories and domestic abuse. This increase is especially pronounced in the subgroup of male-to-female domestic abuse, and is also present in other violent male-to-female crimes. Our work provides strong evidence for the link between football and domestic abuse, and further illuminates the instrumental role of alcohol and masculinity construction in this relationship.}
 
 % Please include corresponding author, author contribution and author declaration information
-\authorcontributions{Please provide details of author contributions here.}
-\authordeclaration{Please declare any conflict of interest here.}
-\equalauthors{\textsuperscript{1}A.O.(Author One) and A.T. (Author Two) contributed equally to this work (remove if not applicable).}
+\authorcontributions{Trendl began exploring domestic abuse; all authors formulated the research questions. Stewart obtained the data. Mullett anonymised the data. Trendl processed the data and completed all analysis. Trendl wrote the initial draft, which all authors then revised.}
+\authordeclaration{The authors have no conflicts of interest.}
+%\equalauthors{\textsuperscript{1}A.O.(Author One) and A.T. (Author Two) contributed equally to this work (remove if not applicable).}
 \correspondingauthor{\textsuperscript{2}To whom correspondence should be addressed. E-mail: trendlak\@gmail.com}
 
 % Keywords are not mandatory, but authors are strongly encouraged to provide them. If provided, please include two to five keywords, separated by the pipe symbol, e.g:
