--- a/submission_3/football_domesticabuse.tex
+++ b/submission_3/football_domesticabuse.tex
@@ -51,7 +51,7 @@
 
 \author{Anna Trendl$^{a,*}$ \\ \href{mailto:a.trendl@warwick.ac.uk}{a.trendl@warwick.ac.uk}\\
  \and Neil Stewart$^b$ \\ 
- \href{mailto:neil.stewart@wbs.ac.uk}{neil.stewart@wbs.ac.uk}
+ \href{mailto:neil.stewart@wbs.ac.uk}{Neil.Stewart@wbs.ac.uk}
  \\ 
  \and Timothy L. Mullett$^b$ \\
  \href{mailto:Tim.Mullett@wbs.ac.uk}{Tim.Mullett@wbs.ac.uk}
@@ -622,15 +622,15 @@ For victims, domestic abuse does not occur once every four years following a foo
 
 
 
-\section*{Data availability statement}
-
-The data that support the findings of this study are available from West Midlands Police
-but restrictions apply to the availability of these data, which were used under license
-for the current study by researchers with security vetting from the police, and so are not publicly available. Data are however available from the authors upon reasonable request and with permission of West Midlands Police.
-
-\section*{Code availability}
-
-The code for producing the results can be accessed \href{https://osf.io/kg9yr/?view_only=172a33b467bd4566b2e5dea0e2f59f8c}{here}. 
+%\section*{Data availability statement}
+%
+%The data that support the findings of this study are available from West Midlands Police
+%but restrictions apply to the availability of these data, which were used under license
+%for the current study by researchers with security vetting from the police, and so are not publicly available. Data are however available from the authors upon reasonable request and with permission of West Midlands Police.
+%
+%\section*{Code availability}
+%
+%The code for producing the results can be accessed \href{https://osf.io/kg9yr/?view_only=172a33b467bd4566b2e5dea0e2f59f8c}{here}. 
 
 \bibliographystyle{apacite}
 
